force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/BMCServiceDesk__Projected_Service_Outage__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for defining blackouts or outages</description>
    <label>Service Outage</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Outage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>