force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/fields/BMCServiceDesk__Affected_Service__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Affected_Service__c</fullName>
    <description>This field stores the affected service for the outage being defined</description>
    <formula>BMCServiceDesk__FKConfiguration_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the services that are affected by the service outage.</inlineHelpText>
    <label>Affected Service</label>
    <type>Text</type>
</CustomField>