force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/fields/BMCServiceDesk__Blackout__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Blackout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the value if the changes are allowed to be scheduled</description>
    <inlineHelpText>Select this field if you want to prevent change requests from being created or modified during the service outage.</inlineHelpText>
    <label>Blackout period</label>
    <type>Checkbox</type>
</CustomField>