force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/fields/BMCServiceDesk__Display_in_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Display_in_Self_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays the service outage in Self Service.</description>
    <inlineHelpText>Select to show the service outage in Self Service.</inlineHelpText>
    <label>Display in Self Service</label>
    <type>Checkbox</type>
</CustomField>