force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/fields/BMCServiceDesk__End_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__End_Date__c</fullName>
    <description>This field stores the date and time when the outage ends</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>