force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/fields/BMCServiceDesk__FKConfiguration_Item__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked service</description>
    <label>Configuration Item</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Outages</relationshipLabel>
    <relationshipName>Outages</relationshipName>
    <type>Lookup</type>
</CustomField>