force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/fields/BMCServiceDesk__Outage_Duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Outage_Duration__c</fullName>
    <description>Displays/stores the duration in minutes for which the service was not available.</description>
    <formula>IF(
AND(NOT(AND(ISBLANK(BMCServiceDesk__Start_Date__c),ISBLANK(BMCServiceDesk__End_Date__c))),
BMCServiceDesk__End_Date__c &gt; BMCServiceDesk__Start_Date__c),
((BMCServiceDesk__End_Date__c - BMCServiceDesk__Start_Date__c) * 1440),
IF(AND(ISBLANK(BMCServiceDesk__End_Date__c), NOT(ISBLANK(BMCServiceDesk__Start_Date__c)), NOW() &gt; BMCServiceDesk__Start_Date__c),
((NOW() - BMCServiceDesk__Start_Date__c) * 1440),
null
))</formula>
    <inlineHelpText>Displays the duration in minutes for which the service was not available.</inlineHelpText>
    <label>Outage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>