force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/fields/BMCServiceDesk__Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Root_Cause__c</fullName>
    <description>Stores information about the root cause of the Service Outage.</description>
    <inlineHelpText>Specify the root cause of the service outage.</inlineHelpText>
    <label>Root Cause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>