force-app/main/default/objects/BMCServiceDesk__Projected_Service_Outage__c/validationRules/BMCServiceDesk__OutageStatusReqdWhenServSelButNoBlackout.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__OutageStatusReqdWhenServSelButNoBlackout</fullName>
    <active>true</active>
    <description>Outage Status is a mandatory field when Affected Service is selected and Blackout period is not. Selecting Blackout period will make Outage Status optional.</description>
    <errorConditionFormula>AND(
BMCServiceDesk__Affected_Service__c  &lt;&gt; null,
BMCServiceDesk__Affected_Service__c &lt;&gt; &apos;&apos;,
BMCServiceDesk__Blackout__c = false,
ISPICKVAL(BMCServiceDesk__Service_Status__c,&apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Outage Status is a mandatory field when Affected Service is selected and Blackout period is not.</errorMessage>
</ValidationRule>